--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bunyan-sfdx-no-dtrace",
+  "name": "bunyan",
   "version": "1.8.2",
   "description": "a JSON logging library for node.js services (dtrace is disabled)",
   "author": "Trent Mick <trentm@gmail.com> (http://trentm.com)",
