--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "engines": {
     "node": ">=10.5.0"
   },
+  "engines": [
+    "node >=0.10.0"
+  ],
   "keywords": [
     "log",
     "logging",
@@ -30,10 +33,10 @@
   "// mv": "required for RotatingFileStream",
   "// moment": "required for local time with CLI",
   "optionalDependencies": {
+    "dayjs": "^1.8.16",
     "dtrace-provider": "~0.6",
     "mv": "~2",
-    "safe-json-stringify": "~1",
-    "moment": "^2.10.6"
+    "safe-json-stringify": "~1"
   },
   "devDependencies": {
     "nodeunit": "0.9",
@@ -45,5 +48,7 @@
   "scripts": {
     "test": "make test"
   },
-  "dependencies": {}
+  "dependencies": {
+    "dayjs-plugin-utc": "^0.1.2"
+  }
 }
