--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bunyan",
+  "name": "@salesforce/bunyan",
   "version": "1.8.2",
   "description": "a JSON logging library for node.js services (dtrace is disabled)",
   "author": "Trent Mick <trentm@gmail.com> (http://trentm.com)",
@@ -7,15 +7,25 @@
   "bin": {
     "bunyan": "./bin/bunyan"
   },
-
+  "homepage": "https://github.com/forcedotcom/node-bunyan#readme",
   "repository": {
     "type": "git",
-    "url": "git://github.com/cwallsfdc/node-bunyan.git"
+    "url": "git+https://github.com/forcedotcom/node-bunyan.git"
   },
-  "engines": ["node >=0.10.0"],
-  "keywords": ["log", "logging", "log4j", "json", "bunyan"],
+  "bugs": {
+    "url": "https://github.com/forcedotcom/node-bunyan/issues"
+  },
+  "engines": {
+    "node": ">=10.5.0"
+  },
+  "keywords": [
+    "log",
+    "logging",
+    "log4j",
+    "json",
+    "bunyan"
+  ],
   "license": "MIT",
-
   "// dtrace-provider": "required for dtrace features",
   "// mv": "required for RotatingFileStream",
   "// moment": "required for local time with CLI",
@@ -32,10 +42,8 @@
     "verror": "1.3.3",
     "vasync": "1.4.3"
   },
-
   "scripts": {
     "test": "make test"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
