--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
   "optionalDependencies": {
     "dtrace-provider": "~0.6",
     "mv": "~2",
-    "safe-json-stringify": "~1",
-    "moment": "^2.10.6"
+    "safe-json-stringify": "~1"
   },
   "devDependencies": {
     "nodeunit": "0.9",
@@ -45,5 +44,8 @@
   "scripts": {
     "test": "make test"
   },
-  "dependencies": {}
+  "dependencies": {
+    "dayjs": "^1.8.16",
+    "dayjs-plugin-utc": "^0.1.2"
+  }
 }
