--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salesforce/bunyan",
-  "version": "1.8.2",
+  "version": "2.0.0",
   "description": "a JSON logging library for node.js services (dtrace is disabled)",
   "author": "Trent Mick <trentm@gmail.com> (http://trentm.com)",
   "main": "./lib/bunyan.js",
@@ -38,6 +38,7 @@
     "nodeunit": "0.9",
     "ben": "0.0.0",
     "markdown-toc": "0.12.x",
+    "shelljs": "0.8.3",
     "verror": "1.3.3",
     "vasync": "1.4.3"
   },
